--- a/catkin_ws/src/using_markers/CMakeLists.txt
+++ b/catkin_ws/src/using_markers/CMakeLists.txt
@@ -199,3 +199,6 @@ include_directories(
 
 add_executable(basic_shapes src/basic_shapes.cpp)
 target_link_libraries(basic_shapes ${catkin_LIBRARIES})
+
+add_executable(points_and_lines src/points_and_lines.cpp)
+target_link_libraries(points_and_lines ${catkin_LIBRARIES})
