--- a/catkin_ws/src/tf_learning/CMakeLists.txt
+++ b/catkin_ws/src/tf_learning/CMakeLists.txt
@@ -204,3 +204,6 @@ target_link_libraries(turtle_tf_broadcaster ${catkin_LIBRARIES})
 
 add_executable(turtle_tf_listener src/turtle_tf_listener.cpp)
 target_link_libraries(turtle_tf_listener ${catkin_LIBRARIES})
+
+add_executable(frame_tf_broadcaster src/frame_tf_broadcaster.cpp)
+target_link_libraries(frame_tf_broadcaster ${catkin_LIBRARIES})
